# krpc-rust

./: Cargo.toml  README.md  build.rs
proto/: internal.proto
src/: clt.rs  lib.rs  proto.rs  server.rs  svr.rs
tests/: integration_test.rs  rpcurl.rs
