[package]
name = "krpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Martin Cong <cyy2cyy@gmail.com>"]


# [lib]
# name = "krpc"
# path = "src/lib.rs"

# [[bin]]
# name = "rpcurl"
# path = "src/bin/rpcurl.rs" 

[features]
svr = []
clt = []
default = ["svr"]
# rpcurl = ["clt"]

[dependencies]
# base64 = "0.22.1"
const-str = "0.5.7"
prost = "0.13.1"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"]}

# https://github.com/rust-lang/rustup/issues/3400#issuecomment-1683762630
tonic = {version = "0.12.2",features = ["tls","tls-native-roots"]}
# webpki-roots bakes trust roots into your binaries
# rustls-native-certs finds trust roots from the operating system
# tonic = {version = "0.12.2",features = ["tls","tls-webpki-roots"]}
rustls = "0.23.12"


# [dev-dependencies]
# krpc = { path = ".", features = ["clt"] }


[build-dependencies]
tonic-build = "0.12.2"
