[package]
name = "krpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Martin Cong <cyy2cyy@gmail.com>"]


# [lib]
# name = "krpc"
# path = "src/lib.rs"

# [[bin]]
# name = "rpcurl"
# path = "src/bin/rpcurl.rs" 

[features]
svr = ["dep:const-str", "dep:tonic", "tonic?/server"]
clt = [
    "dep:rustls",
    "dep:tonic",
    "tonic?/tls-native-roots",
    #"tonic?/channel","tonic?/tls",
    # https://github.com/rust-lang/rustup/issues/3400#issuecomment-1683762630
]
default = ["svr"]

[dependencies]
prost = "0.13.1"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }            #"macros", 
tonic = { version = "0.12.2", default-features = false, features = ["codegen"] ,optional = true }

# client side
rustls = { version = "0.23.12", optional = true }
# server side
const-str = { version = "0.5.7", optional = true }


# [dev-dependencies]
# krpc = { path = ".", features = ["clt"] }


[build-dependencies]
tonic-build = "0.12.2"
